// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventAdminFormPage /> it renders correctly, with props at false 1`] = `
<div>
  <div
    className="box box-primary container-fluid"
  >
    <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "id": "event1",
          "viewerDidAuthor": true,
        }
      }
      onSubmit={[Function]}
      query={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "viewer": Object {
            "isSuperAdmin": false,
          },
        }
      }
      validate={[Function]}
    />
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="box-content__toolbar"
    >
      <Connect(SubmitButton)
        disabled={false}
        id="confirm-event-edit"
        isSubmitting={false}
        label="global.save"
        onSubmit={[Function]}
      />
      <div>
        <Connect(DeleteModal)
          buttonConfirmMessage="group.admin.parameters.modal.delete.button"
          closeDeleteModal={[Function]}
          deleteElement={[Function]}
          deleteModalContent="group.admin.parameters.modal.delete.content"
          deleteModalTitle="event.alert.delete"
          showDeleteModal={false}
        />
        <div>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="danger"
            className="ml-5"
            disabled={false}
            id="delete-event"
            onClick={[Function]}
          >
            <i
              className="fa fa-trash"
            />
             
            <FormattedMessage
              id="global.delete"
              values={Object {}}
            />
          </Button>
        </div>
      </div>
      <AlertForm
        invalid={false}
        submitFailed={false}
        submitSucceeded={false}
        submitting={false}
        valid={false}
      />
    </ButtonToolbar>
  </div>
</div>
`;

exports[`<EventAdminFormPage /> it renders correctly, with props at true 1`] = `
<div>
  <div
    className="box box-primary container-fluid"
  >
    <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "id": "event1",
          "viewerDidAuthor": true,
        }
      }
      onSubmit={[Function]}
      query={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "viewer": Object {
            "isSuperAdmin": true,
          },
        }
      }
      validate={[Function]}
    />
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="box-content__toolbar"
    >
      <Connect(SubmitButton)
        disabled={true}
        id="confirm-event-edit"
        isSubmitting={true}
        label="global.save"
        onSubmit={[Function]}
      />
      <div>
        <Connect(DeleteModal)
          buttonConfirmMessage="group.admin.parameters.modal.delete.button"
          closeDeleteModal={[Function]}
          deleteElement={[Function]}
          deleteModalContent="group.admin.parameters.modal.delete.content"
          deleteModalTitle="event.alert.delete"
          showDeleteModal={false}
        />
        <div>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="danger"
            className="ml-5"
            disabled={false}
            id="delete-event"
            onClick={[Function]}
          >
            <i
              className="fa fa-trash"
            />
             
            <FormattedMessage
              id="global.delete"
              values={Object {}}
            />
          </Button>
        </div>
      </div>
      <AlertForm
        invalid={true}
        submitFailed={true}
        submitSucceeded={true}
        submitting={true}
        valid={true}
      />
    </ButtonToolbar>
  </div>
</div>
`;

exports[`<EventAdminFormPage /> it renders correctly, without event 1`] = `
<div>
  <div
    className="box box-primary container-fluid"
  >
    <ForwardRef(Relay(Connect(InjectIntl(ReduxForm))))
      event={null}
      onSubmit={[Function]}
      query={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "viewer": Object {
            "isSuperAdmin": true,
          },
        }
      }
      validate={[Function]}
    />
    <ButtonToolbar
      bsClass="btn-toolbar"
      className="box-content__toolbar"
    >
      <Connect(SubmitButton)
        disabled={true}
        id="confirm-event-create"
        isSubmitting={true}
        label="global.save"
        onSubmit={[Function]}
      />
      <AlertForm
        invalid={true}
        submitFailed={true}
        submitSucceeded={true}
        submitting={true}
        valid={true}
      />
    </ButtonToolbar>
  </div>
</div>
`;
